# cryfs

./: CMakeLists.txt
cmake-utils/: DependenciesFromConan.cmake  utils.cmake
src/: CMakeLists.txt
src/blockstore/: CMakeLists.txt
src/blockstore/implementations/caching/: CachingBlockStore2.cpp
src/blockstore/implementations/caching/cache/: Cache.h
src/blockstore/implementations/eds/: EdsBlockStore.cpp  EdsBlockStore.h
src/blockstore/implementations/integrity/: IntegrityBlockStore2.cpp  IntegrityBlockStore2.h  KnownBlockVersions.cpp  KnownBlockVersions.h
src/blockstore/implementations/low2highlevel/: LowToHighLevelBlock.cpp
src/blockstore/implementations/ondisk/: OnDiskBlockStore2.cpp
src/cpp-utils/: CMakeLists.txt
src/cpp-utils/assert/: assert.h
src/cpp-utils/data/: Data.cpp  Data.h  DataFileSystem.cpp  DataFileSystem.h  EdsData.cpp  EdsData.h  EdsDataFileSystem.cpp  EdsDataFileSystem.h  FsAndPath.cpp  FsAndPath.h
src/cpp-utils/io/: EdsConsole.cpp  EdsConsole.h
src/cpp-utils/logging/: logging.h
src/cpp-utils/tempfile/: TempDir.cpp
src/cpp-utils/thread/: debugging_nonwindows.cpp
src/cryfs/: CMakeLists.txt  utils.cmake
src/cryfs-cli/: CMakeLists.txt  Cli.cpp  Cli.h  CryfsLauncher.cpp  CryfsLauncher.h  CryfsMain.cpp  CryfsMain.h  Environment.cpp  Environment.h  Fuse.cpp  Fuse.h  RunFileSystem.cpp  RunFileSystem.h  StreamBufTest.cpp  StreamBufTest.h
src/cryfs-cli/program_options/: Parser.cpp  Parser.h  ProgramOptions.cpp  ProgramOptions.h
src/cryfs/impl/config/: CryConfigCreator.cpp  CryConfigFile.cpp  CryConfigFile.h  CryConfigLoader.cpp  CryConfigLoader.h  Testtt.cpp  Testtt.h
src/cryfs/impl/filesystem/: CryDevice.cpp  CryDevice.h
src/cryfs/impl/filesystem/fsblobstore/: FsBlobStore.cpp
src/cryfs/impl/localstate/: BasedirMetadata.cpp  BasedirMetadata.h  LocalStateDir.cpp  LocalStateDir.h  LocalStateMetadata.cpp  LocalStateMetadata.h
src/fspp/fuse/: CMakeLists.txt  Fuse.cpp  Fuse.h  params.h
src/fspp/fuse/fuseeds/: FuseCommonEds.h  FuseEds.cpp  FuseEds.h  fuse_common.h
